kubernetes/dev/deployment_solar_system.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-system-deployment
  labels:
    app: solar-system
  namespace: _[_NAMESPACE_]_
spec:
  replicas: _[_REPLICAS_]_
  selector:
    matchLabels:
     app: solar-system
  template:
    metadata:
      labels:
        app: solar-system
    spec:
      containers:
        - name: solar-system
          imagePullPolicy: Always

          image: _[_IMAGE_NAME_]_
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http

      imagePullSecrets:
        - name: docker-secret
