kubernetes/dev/service_solar_system.yml
apiVersion: v1
kind: Service
metadata:
  name: solar-system-service
  labels:
    app: solar-system
  namespace: _[_NAMESPACE_]_
spec:
  selector:
    app: solar-system
  type: NodePort
  ports:
    - nodePort: 31001
      port: 3000
      targetPort: 3000
      protocol: TCP
