kubernetes/dev/ingress_solar_system.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system-ingress
  namespace: dev
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solar-system-service
                port:
                  number: 3000
